# fed-medicaid

./: .gitignore  Makefile  README.md  generate_plots.py  pyproject.toml
configs/: base.yaml  experiment_1.yaml  experiment_2.yaml  experiment_3.yaml  experiment_4.yaml  experiment_5.yaml
data/partitioned/: .parquet  225400000X.parquet  AA.parquet  AE.parquet  AK.parquet  AL.parquet  AP.parquet  AR.parquet  ARMED FORCES EUROPE.parquet  AZ.parquet  BAYERN.parquet  BC.parquet  CA - CALIFORNIA.parquet  CALIFORNIA.parquet  CE.parquet  CLARK COUNTY.parquet  CO- COLORADO.parquet  CO.parquet  CT.parquet  DC.parquet  DE.parquet  FLORIDA.parquet  FM.parquet  GA.parquet  GU.parquet  HI.parquet  IA.parquet  ID.parquet  ILLINOIS.parquet  IN.parquet  KANAGAWA.parquet  KS.parquet  KY.parquet  LA.parquet  MA.parquet  MASSACHUSETTS.parquet  MD-MARYLAND.parquet  MD.parquet  ME.parquet  MI.parquet  (+30 more)
experiments/: run_experiment_1.py  run_experiment_2.py  run_experiment_3.py  run_experiment_4.py  run_experiment_5.py
fed_medicaid.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
results/: e1_results.json  e2_results.json  e3_results.json  e4_results.json  e5_results.json
scripts/: prepare_data.py
src/: __init__.py
src/attacks/: __init__.py  base.py  data_poison.py  free_rider.py  model_poison.py  random_poison.py  sybil.py
src/data/: __init__.py  loaders.py  partition.py  splits.py
src/evaluation/: __init__.py  metrics.py  plots.py
tests/: test_attacks.py  test_data.py  test_federation.py  test_models.py  test_privacy.py  test_signguard.py  test_strategies.py
(+173 files in other folders)
